[package]
name = "gpxfilter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
gpx = "0.8.5"
geo = "0.18.0"
unicode-bom = "1.1.4"
regex = "1"
shapefile = "0.3.0"
simple-error = "0.2"
